# 5g-traffic-forecasting

./: README.md  pyproject.toml
scripts/: run_experiment.py
src/traffic_forecasting/: __init__.py  data.py  experiment.py  features.py  model.py
tests/: test_forecasting.py
