[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "5g-traffic-forecasting"
version = "0.1.0"
description = "Synthetic 5G traffic forecasting with lag features and Random Forest"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scikit-learn", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]
